<resources>
    <string name="app_name">WinnerClass</string>
    <string name="applogo">AppLogo</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password ?!</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t Have an account, Sign UP</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_sign_in">Already have an account, Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="calculator_app">Calculator App</string>
    <string name="restaurant_app">Restaurant App</string>
    <string name="todolist_app">Todolist App</string>
    <string name="coroutines_app">Coroutines App</string>
    <string name="shopping_item_app">Shopping Item App</string>
    <string name="breaking_bad_api_app">Breaking Bad Api App</string>
    <string name="firebase_clothes_app">Firebase Clothes App</string>
    <string name="first_number">First Number</string>
    <string name="second_number">Second Number</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="Multiply">*</string>
    <string name="divide">/</string>
    <string name="result_here">Result Here</string>
    <string name="reset_values">Reset Values</string>
    <string name="welcome_to_our_application">Welcome to our Application</string>
    <string name="which_kind_of_burger_you_neet_to_order">Which kind of burger you neet to order</string>
    <string name="beef">Beef</string>
    <string name="chicken">Chicken</string>
    <string name="shrimp">Shrimp</string>
    <string name="which_extras_you_want_to_add">Which Extras you want to add ?</string>
    <string name="cheese">Cheese</string>
    <string name="salad">Salad</string>
    <string name="onions">Onions</string>
    <string name="order">Order</string>
    <string name="dummy_result">Dummy Result</string>
    <string name="just_add">Add</string>
    <string name="add_todo">Add</string>
    <string name="type_a_todo">Type a todo...</string>
    <string name="item_todo">Item Todo</string>
    <string name="navigation_drawer_app">Navigation Drawer App</string>
    <string name="eslam_medhat">Eslam Medhat</string>
    <string name="ieslammedhat_gmail_com">ieslammedhat@gmail.com</string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent</string>
    <string name="archive">Archive</string>
    <string name="logout">Logout</string>
    <string name="inbox_fragment">Inbox Fragment</string>
    <string name="send_fragment">Send Fragment</string>
    <string name="archive_fragment">Archive Fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="send_notification">Send Notification</string>
    <string name="normal_notification_app">Normal Notification APP</string>
    <string name="broadcast_receiver_app">Broadcast Receiver App</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="item_name">Item Name</string>
    <string name="item_amount">Item Amount</string>
    <string name="add_new_item">Add New Item</string>
    <string name="amount">Amount</string>
    <string name="cancel">Cancel</string>
</resources>