<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:background="#22BEBEBE"
    android:padding="10dp"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/etShoppingItemDialogName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/item_name"
        app:layout_constraintEnd_toStartOf="@+id/etShoppingItemDialogAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/add_new_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etShoppingItemDialogAmount"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/amount"
        android:inputType="number"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/etShoppingItemDialogName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etShoppingItemDialogName"
        app:layout_constraintTop_toTopOf="@+id/etShoppingItemDialogName" />

    <Button
        android:id="@+id/btnShoppingDialogAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/just_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etShoppingItemDialogName" />

    <Button
        android:id="@+id/btnShoppingDialogCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnShoppingDialogAdd"
        app:layout_constraintTop_toTopOf="@+id/btnShoppingDialogAdd" />
</androidx.constraintlayout.widget.ConstraintLayout>